@@ -1,3 +1,8 @@
+2004-07-26 Alain Magloire
+
+	Fix for PR 68665
+	* utils/org/eclipse/cdt/utils/coff/PE.java
+
 2004-07-26 Vladimir Hirsl
 
 	HP-UX SOM Binary parser patch
